Nav and aside design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header  class=" w-full fixed z-50 bg-white shadow-sm flex items-center justify-start">
         <!-- nav -->
         <div id="logo" class=" w-1/5 bg-[#111C43] z-50">
-            <h2 class="p-4 text-white font-extrabold border-b border-white flex justify-center items-center"><img class="w-8 h-8" src="toggle-logo.png" alt=""><span class="title"><span  class=" text-[#845BDE]">Y</span>NEX</span></h2>
+            <h2 class="py-4 px-[21px] text-white font-extrabold border-b border-white flex justify-center items-center"><img class="w-8 h-8" src="toggle-logo.png" alt=""><span class="title"><span  class=" text-[#845BDE]">Y</span>NEX</span></h2>
         </div>
         <nav id="nav"  class=" w-4/5 bg-white px-5">
             <div onclick="toggleBtn()">
@@ -25,14 +25,14 @@
         </nav>
     </header>
   <section class="flex justify-start relative top-16">
-    <aside id="aside" class="w-1/5  bg-[#111C43] h-screen text-center ">
+    <aside id="aside" class="w-1/5  bg-[#111C43] h-screen text-center scrollable-container">
        
         <div class=" bg-[#111C43] text-left px-4 space-y-3">
             <div class="">
                 <div class="space-y-2">
                     <p class="p-1 uppercase text-[#5A658A] hidden text-sm">main</p>
                     <details class="w-full" open>
-                        <summary class="text-white w-full list-none bg-[#1D284D] rounded-lg p-2"><i class=" fa-solid fa-house"></i><span class="title ml-3">DashBoard</span></summary>
+                        <summary class="text-white w-full list-none bg-[#1D284D] rounded-lg py-2 px-3"><i class=" fa-solid fa-house"></i><span class="title ml-3">DashBoard</span></summary>
                         <ul id="Ulist" class="text-white ml-5 mb-1 title">
                             <li class="list"><a>CRM</a></li>
                             <li class="list"><a>Ecommerce</a></li>
@@ -54,7 +54,7 @@
                     <p class="p-1 uppercase hidden text-[#5A658A] text-sm">pages</p>
                     <!-- pages details class="w-full" -->
                     <details class="w-full">
-                        <summary class="text-white w-full list-none rounded-lg p-2"><i class="  fa-regular fa-file"></i><span class="title ml-3">Pages</span></summary>
+                        <summary class="text-white w-full list-none rounded-lg py-2 px-3"><i class="  fa-regular fa-file"></i><span class="title ml-3">Pages</span></summary>
                         <ul class="text-white ml-5 mb-1">
                             <li class="list"><a>About Us</a></li>
                             <li class=" flex">
@@ -131,7 +131,7 @@
                     </details >
                         <!-- Task details class="w-full" -->
                         <details class="w-full">
-                            <summary class="text-white w-full  list-none rounded-lg p-2"><i class="  fa-solid fa-list-check"></i><span class="title ml-3">Task</span></summary>
+                            <summary class="text-white w-full  list-none rounded-lg py-2 px-3"><i class="  fa-solid fa-list-check"></i><span class="title ml-3">Task</span></summary>
                             <ul class="text-white ml-5 mb-1 title">
                                 <li class="list"><a>Kanban Board</a></li>
                                 <li class="list"><a>List View</a></li>
@@ -140,7 +140,7 @@
                         </details >
                             <!-- Authentication details class="w-full" -->
                         <details class="w-full">
-                            <summary class="text-white w-full list-none rounded-lg p-2"><i class="  fa-solid fa-fingerprint"></i><span class="title ml-3">Authentication</span></summary>
+                            <summary class="text-white w-full list-none rounded-lg py-2 px-3"><i class="  fa-solid fa-fingerprint"></i><span class="title ml-3">Authentication</span></summary>
                             <ul class="title text-white ml-5 mb-1">
                                 <li class="list"><a>Coming Soon</a></li>
                                 <li class="flex">
@@ -202,7 +202,7 @@
                         </details >
                         <!-- Error details class="w-full" -->
                         <details class="w-full">
-                            <summary class="text-white w-full list-none rounded-lg p-2"><i class="  fa-solid fa-triangle-exclamation"></i><span class="title ml-3">Error</span></summary>
+                            <summary class="text-white w-full list-none rounded-lg py-2 px-3"><i class="  fa-solid fa-triangle-exclamation"></i><span class="title ml-3">Error</span></summary>
                             <ul class="text-white ml-5 mb-1 title">
                                 <li class="list"><a>401 Error</a></li>
                                 <li class="list"><a>404 Error</a></li>
